Edit "quote-author" top margin

--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,7 @@ button,
 }
 
 .quote-author {
-  margin-top: 0;
+  margin-top: 18px;
   text-align: right;
   font-size: 20px;
   font-weight: bold;
